--- a/sorteio.html
+++ b/sorteio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorteio - Bingo da Felicidade</title>
+    <title>Sorteio - Bingo da Felicidade 🎲</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,6 +16,20 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            overflow-x: hidden;
+        }
+
+        .header {
+            font-size: 2.5rem;
+            margin-bottom: 30px;
+            color: orange;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .emoji-container {
+            font-size: 3rem;
+            margin: 20px 0;
+            animation: float 3s ease-in-out infinite;
         }
 
         .drawn-word {
@@ -29,6 +43,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+
+        .drawn-word.highlight {
+            transform: scale(1.05);
+            background-color: #ffe761;
         }
 
         .draw-button {
@@ -39,23 +60,59 @@
             border: none;
             border-radius: 10px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         .draw-button:hover {
             background-color: darkorange;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        }
+
+        .draw-button:active {
+            transform: translateY(1px);
         }
 
         .drawn-words {
             margin-top: 30px;
             font-size: 1.2rem;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            max-width: 80%;
+            line-height: 1.6;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0); }
+        }
+
+        @media (max-width: 768px) {
+            .header {
+                font-size: 2rem;
+            }
+            .drawn-word {
+                font-size: 3rem;
+                min-height: 150px;
+            }
+            .draw-button {
+                padding: 15px 30px;
+                font-size: 1.2rem;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="header">Bingo da Felicidade 🎯</div>
+    <div class="emoji-container">🎲 🎰 🎯 🎨</div>
     <button class="draw-button" id="drawWord">Sortear Palavra</button>
     <div class="drawn-word" id="drawnWord">Palavra sorteada aparecerá aqui</div>
     <div class="drawn-words" id="drawnWordsList">Palavras já sorteadas:</div>
+    <div class="emoji-container">🍀 🎉 ✨ 🎪</div>
 
     <script src="sorteio.js"></script>
 </body>
